--- a/views/donate.tmpl
+++ b/views/donate.tmpl
@@ -7,28 +7,28 @@
 	<div id="right-text">
 	<h3>Select an Amount</h3>
 	<table>
-		<tr> 
-			<td class="donate-price"> 
-				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_flow&SESSION= mNzmkokTfnJdIi6j2hz0zUWcxnVJdBqcIHKZzY16fJruSrvEjE8ZX4w_uL8&dispatch= 5885d80a13c0db1fc53a056acd1538874a43d73a07f26b2caf7353d6a9263490"> <img src="/images/other.jpg" /> </a> 
-			</td> 
-			<td class="donate-price"> 
-				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_flow&SESSION= w9FQAIIVs9ArYlbYTV6kmEd-qxfZGp_jjInTTROOr21zM-RyUbj2adPdVR8&dispatch= 5885d80a13c0db1fc53a056acd1538874a43d73a07f26b2caf7353d6a9263490"> <img src="/images/25.jpg" /> </a> 
-			</td> 
-			<td class="donate-price"> 
-				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_flow&SESSION=Xsl- oNp1kVuvq--UyM1p1o1q2vLMuEmluBUtnr3lNIHTrOJMFgM1xujayEG&dispatch= 5885d80a13c0db1fc53a056acd1538874a43d73a07f26b2caf7353d6a9263490"> <img src="/images/50.jpg" /> </a> 
-			</td> 
-		</tr> 
-		<tr> 
-			<td class="donate-price"> 
-				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_flow&SESSION= WhxuMenCryC18xMvtmVki8n-ZhurXEvaptOdWAHL7T1WO-E_obrYx51f7MG&dispatch= 5885d80a13c0db1fc53a056acd1538874a43d73a07f26b2caf7353d6a9263490"> <img src="/images/100.jpg" /> </a> 
-			</td>
-			<td class="donate-price">
-				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_flow&SESSION= P7pYNknDu2zGnNoS7Y8tO-Vrq_sWctmv17szcC909c811Tk8plKij8lR0JK&dispatch= 5885d80a13c0db1fc53a056acd1538874a43d73a07f26b2caf7353d6a9263490"> <img src="/images/250.jpg" /> </a> 
-			</td> 
-			<td class="donate-price">
-				<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_flow&SESSION= 6ivORXfq29t_N83ZSCfvGw-ex6jCmGrQvEVnnqmi5PiC64WrwYpzLD8XfAy&dispatch= 5885d80a13c0db1fc53a056acd1538874a43d73a07f26b2caf7353d6a9263490"> <img src="/images/500.jpg" /> </a> 
-			</td> 
-		</tr>
+	  <tr> 
+	    <td class="donate-price"> 
+	      $pp_button(0)
+	    </td> 
+	    <td class="donate-price"> 
+	      $pp_button(25)
+	    </td> 
+	    <td class="donate-price"> 
+	      $pp_button(50)
+	    </td> 
+	  </tr> 
+	  <tr> 
+	    <td class="donate-price"> 
+	      $pp_button(100)
+	    </td>
+	    <td class="donate-price">
+	      $pp_button(250)
+	    </td> 
+	    <td class="donate-price">
+	      $pp_button(500)
+	    </td> 
+	  </tr>
 	</table> 
 	</div>
 	<div id="left-text">
