--- a/views/how.tmpl
+++ b/views/how.tmpl
@@ -1,6 +1,7 @@
 #extends base
 
-#def maincol() <div id="page-wrap"> <div id="right-text"> <div id="who"> <h2>Steering Committee</h2> <dl> <dt> <a href="#"> <img
+#def maincol() 
+<div id="page-wrap"> <div id="right-text"> <div id="who"> <h2>Steering Committee</h2> <dl> <dt> <a href="#"> <img
 src="/images/judith.jpg" /> </a> </dt> <dd> <strong>Judith Kaine:</strong>  Influenced by a visit to Cap Haitien and her work in healthcare
 with Haitian migrants in the Dominican Republic, Judith founded the 100 Beds for Haiti campaign. Judith brings experiences working with
 refugees and displaced communities in the USA, Sudan, Uganda, and the Caribbean, on projects focused in health promotion, post-conflict
@@ -78,3 +79,4 @@ Psychology from Brandeis University, Daren speaks Portuguese and Spanish, and is
 music and world travel. </li> </ul>
 
 <!-- End Advisory Board List --> </div> </div>
+#end def
