--- a/views/partners.tmpl
+++ b/views/partners.tmpl
@@ -4,7 +4,7 @@
 
 <div id="page-wrap"> 
 	<div class="header">
-		<h1>100 Beds&#0039; Partners</h1>
+		<h1>Partners</h1>
 	</div>
 	<div id="right"> 
 		<img src="/images/stats.jpg" /> 
