Updated twitter link and added a link to the blog at the top nav

--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -47,6 +47,7 @@
 				<li><a href="/how">how we work</a></li>
 				<li><a href="/getinvolved">get involved</a></li>
 				<li><a class="nav-donate" href="/donate">donate now</a></li>
+				<li><a href="http://100bedsforhaitiblog.blogspot.com/">blog</a></li>
 			</ul>
 		</div>
 	</div>
@@ -69,7 +70,7 @@
 			</div>
 	      	<!-- End VisualLightBox.com BODY section -->
 			<div id="social">
-				<a href="http://twitter.com/100beds4Haiti" target="_blank"><img src="images/twitter.png" /></a>
+				<a href="http://twitter.com/100bedsforhaiti" target="_blank"><img src="images/twitter.png" /></a>
 				<a href="http://www.facebook.com/home.php?#!/pages/100-Beds-for-Haiti/296584143649" target="_blank"><img src="images/facebook.png" /></a>
 				<a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank"><img src="images/flickr.png" /></a>
 	      		<p>
