--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -6,20 +6,20 @@
 <div id="page-wrap">
 	<h1>About 100 beds</h1>
 	<div id="right-text">
-		<h3>Why 100 beds?</h3>  
+		<h3>Why 100 Beds?</h3>  
 		<p>
-			<b>Long-term recovery requires long-term solutions.</b> The Haitian people have emergency needs now as H&ocirc;pital Sacr&eacute; has many patients still assigned to cots and stretchers for lack of hospital beds.  But many are long-term patients and will need physical therapy, rehabilitation, and surgeries. Additional medical conditions will result from lack of durable beds. Also, <b>H&ocirc;pital Sacr&eacute; Coeur must expand</b> to meet the needs of an increasing population. By sending <b>more quality beds</b>, nurses and doctors can ensure that patient recovery <b>happens faster</b> and <b>meet the populations' needs</b>.  Quality hospital beds are durable and, in the long run, are an economical investment into Haiti's overall long-term recovery. 
+			<b>Long-term recovery requires long-term solutions.</b> The Haitian people have emergency needs now as H&ocirc;pital Sacr&eacute; Coeur has many patients still assigned to cots and stretchers for lack of hospital beds.  But many are long-term patients and will need physical therapy, rehabilitation, and surgeries. Additional medical conditions will result from lack of durable beds. Also, <b>H&ocirc;pital Sacr&eacute; Coeur must expand</b> to meet the needs of an increasing population. By sending <b>more quality beds</b>, nurses and doctors can ensure that patient recovery <b>happens faster</b> and <b>meet the populations' needs</b>.  Quality hospital beds are durable and, in the long run, are an economical investment into Haiti's overall long-term recovery. 
 		</p>	
 
 	</div> 
 	<div id="left-text">	
-		<h3>What is the campaign?</h3>
+		<h3>What is the Campaign?</h3>
 
 		<p>
 			The <b><u>100 Beds for Haiti Campaign</u></b> is made up of creative and passionate citizens, students, and professionals dedicated to improving health services in Haiti. 
 		</p>
 		<p>
-			Thousands of displaced Haitians have relocated to Northern Haiti to escape the physical devastation of the January earthquake.  As Haiti's largest and best functioning private hospital, the H&ocirc;pital Sacr&eacute; Coeur (HSC) is responding to this population change.  Prior to the earthquake, HSC had 73 permanent inpatient beds. Since the quake, the hospital has made emergency expansions to meet the inpatient needs of an additional 400+ patients.  In the months ahead, HSC plans to maintain a total bed count of 200, making <b>the need for more quality hospital beds overwhelming.</b>
+			Thousands of displaced Haitians have relocated to northern Haiti to escape the physical devastation of the January earthquake.  As Haiti's largest and best functioning private hospital, the H&ocirc;pital Sacr&eacute; Coeur (HSC) is responding to this population change.  Prior to the earthquake, HSC had 73 permanent inpatient beds. Since the quake, the hospital has made emergency expansions to meet the inpatient needs of an additional 400+ patients.  In the months ahead, HSC plans to maintain a total bed count of 200, making <b>the need for more quality hospital beds overwhelming.</b>
 		</p>
 		<p>
 			In partnership with HSC and The CRUDEM Foundation, Inc. we aim to raise the money and resources to purchase and deliver 100 hospital beds to <b>meet this immediate need</b> and <b>support the sustainable, long-term recovery and development of Haiti.
