--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -4,8 +4,8 @@
   <head>
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     
-    <title>100 beds for Haiti</title>
-    
+    <title>100 Beds for Haiti</title>
+ <link rel='shortcut icon' type='image/ico' href='/images/favicon.ico' />  <link rel='icon' type='image/ico' href='/images/favicon.ico' />  
     <link rel='stylesheet' type='text/css' href='/css/style.css' />
     <link rel="stylesheet" href="/css/vlightbox.css" type="text/css" />
     <style type="text/css">#vlightbox a#vlb{display:none}</style>
@@ -19,22 +19,12 @@
 	
 	<div id="head">
 		<div id="wrap">
-			<img src="images/haiti_logo.jpg" alt="100 Bed's for Haiti logo" />
+			<a href="http://100bedsforhaiti.com"><img src="images/haiti_logo.jpg" alt="100 Beds for Haiti logo" /></a>
 		</div>
 	</div>
 	<div id="lead">
 		<div id="wrap">
-			<p>
-		      In Haiti's Sacr&eacute; Coeur Hospital, hundreds of sick patients will spend tonight sleeping on cots, floors and benches.
-			</p>
-			<p>
-		      Something as simple as a hospital bed can improve the outcome for the sick dramatically.
-		  	</p>
-			<p>
-		      The 100 Beds for Haiti Campaign needs your help to procure and deliver 100 hospital beds. 
-			</p>
-			<p>
-		      Your small contribution today will have a lasting impact on Haiti's healthier tomorrow. 
+			<p>In Haiti's <ahref="http://www.crudem.org" target="_blank">Sacr&eacute; Coeur Hospital</a>, hundreds of sick patients will spend tonight sleeping on cots, floors and benches. Something as simple as a hospital bed can improve the outcome for the sick dramatically. The 100 Beds for Haiti Campaign needs your help to procure and deliver 100 hospital beds. Your small contribution today will have a lasting impact on Haiti's healthier tomorrow. 
 			</p>
 		</div>
   	</div>	
@@ -46,9 +36,11 @@
 				<li><a href="/partners">partners</a></li>
 				<li><a href="/how">how we work</a></li>
 				<li><a href="/getinvolved">get involved</a></li>
-				<li><a class="nav-donate" href="/donate">donate now</a></li>
-				<li><a href="http://100bedsforhaitiblog.blogspot.com/">blog</a></li>
-			</ul>
+				<li><a href="http://100bedsforhaitiblog.blogspot.com/" target="_blank">blog</a></li>
+
+
+<li><a class="nav-donate" href="/donate">donate now</a></li>
+							</ul>
 		</div>
 	</div>
 	
