--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -3,26 +3,29 @@
 #def maincol()
 <div id="page-wrap">
 	<h1>Get involved</h1>
-	<div id="right-text">
-		<h3>Talk with Us</h3>
-		<p>
-			Got ideas? We want to hear them. 
-		</p>
-		<p>
-			Want to volunteer, help out, or partner up?
-			Let's talk! We want your ideas, passions, 
-			and commitments to help raise the money 
-			needed for this very real cause.
-		</p>
-		
-		<div id="contact-area" class="right-col">
 
-			<form method="post" action="/getinvolved/comment">
-				<ul>
-					<li><h3><label for="name">Name:</label><h3></li>
-					<li><input type="text" name="name" id="Name" /></li>
+<div id="right-text">
+	
+<h3>Talk with Us</h3>
+	
+<p>Got ideas? We want to hear them.</p>
+		<p>
+Want to volunteer, help out, or partner up?
+ Let's talk! We want your ideas, passions, 
+and commitments to help raise the money 
+needed for this very real cause.
+</p>
+		
+	
+
+<div id="contact-area" class="right-col">
+
+	<form method="post" action="/getinvolved/comment">
+			<ul>
+					<li><h3><label for="name">Name:</label></h3></li>
+		<li><input type="text" name="name" id="Name" /></li>
 					<li><h3><label for="email">Email:</label></h3></li>
-					<li><input type="text" name="email" id="Email" /></li>
+		<li><input type="text" name="email" id="Email" /></li>
 					<li><h3><label for="message">Message:</label></h3></li>
 					<li><textarea name="message" rows="10" id="Message"></textarea></li>
 					<li><button type="submit" name="submit" class="submit-button"><img src="/images/check.png" alt="" /> Submit</button></li>
