--- a/views/partners.tmpl
+++ b/views/partners.tmpl
@@ -13,10 +13,10 @@
 		</p>
 	</div>
 	<div id="left">
-		<h3>H&ocirc;pital Sacr&eacute; Coeur and the CRUDEM Foundation </h3>
+		<h3>H&ocirc;pital Sacr&eacute; Coeur and The CRUDEM Foundation </h3>
 		<p>
 			H&ocirc;pital Sacr&eacute; Coeur (HSC) is the largest private hospital
-			in North Haiti. Located in Milot, outside the town of Cap-Haitien, the
+			in Northern Haiti. Located in Milot, outside the town of Cap-Haitien, the
 			73 bed hospital has provided service for 23 years. The Red Cross has
 			called HSC the best hospital in the country. The CRUDEM (Center for the
 			Rural Development of Milot) Foundation's sole mission is the operation
@@ -26,7 +26,7 @@
 		<p> 
 			As a 501c3 registered non-profit organization based
 			in the United States, <b>all donations to CRUDEM through the 100 Beds
-			for Haiti campaign are tax-deductible</b>.Please see the
+			for Haiti campaign are tax-deductible.</b>  Please see the
 			organization&#8217;s IRS letter of determination, audited financial
 			statements and Tax ID number <ahref="http://www.crudem.org/give/tax-info">here</a>. 
 		</p>
