--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -5,7 +5,9 @@
     <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     
     <title>100 Beds for Haiti</title>
- <link rel='shortcut icon' type='image/ico' href='/images/favicon.ico' />  <link rel='icon' type='image/ico' href='/images/favicon.ico' />  
+ <meta name="description" content="The 100 Beds for Haiti Campaign supports long-term health solutions that meet immediate needs, by helping Haiti heal, one bed at a time." />
+<meta name="keywords" content="Haiti earthquake recovery, hospital beds, health in Haiti, healthy Haiti, healthcare in Haiti, 100 beds" />
+<link rel='shortcut icon' type='image/ico' href='/images/favicon.ico' />  <link rel='icon' type='image/ico' href='/images/favicon.ico' />  
     <link rel='stylesheet' type='text/css' href='/css/style.css' />
     <link rel="stylesheet" href="/css/vlightbox.css" type="text/css" />
     <style type="text/css">#vlightbox a#vlb{display:none}</style>
@@ -24,7 +26,7 @@
 	</div>
 	<div id="lead">
 		<div id="wrap">
-			<p>In Haiti's <ahref="http://www.crudem.org" target="_blank">Sacr&eacute; Coeur Hospital</a>, hundreds of sick patients will spend tonight sleeping on cots, floors and benches. Something as simple as a hospital bed can improve the outcome for the sick dramatically. The 100 Beds for Haiti Campaign needs your help to procure and deliver 100 hospital beds. Your small contribution today will have a lasting impact on Haiti's healthier tomorrow. 
+			<p>In Haiti's <a href="http://www.crudem.org" target="_blank">Sacr&eacute; Coeur Hospital</a>, hundreds of sick patients will spend tonight sleeping on cots, floors and benches. Something as simple as a hospital bed can improve the outcome for the sick dramatically. The 100 Beds for Haiti Campaign needs your help to procure and deliver 100 hospital beds. Your small contribution today will have a lasting impact on Haiti's healthier tomorrow. 
 			</p>
 		</div>
   	</div>	
@@ -157,7 +159,7 @@
 	    #if $amount > 0
 	    <input type="hidden" name="amount" value="$amount"/>
 	    #end if
-	    <input type="hidden" name="business" value="paypal@crudem.org"/>
+	    <input type="hidden" name="business" value="crudemjoni@peterjkellymd.com"/>
 	    <input type="hidden" name="cmd" value="_donations"/>
 	    <input type="hidden" name="item_name" value="100 Beds for Haiti"/>
 	    <input type="hidden" name="item_number" value="100 Beds for Haiti"/>
