--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,12 +20,10 @@ img { border: none; }
 a { text-decoration: none; }
 
 dl dt { 
-	padding:10px; 
-	margin: 0 0 10px 0; 
+	padding: 0px; 
+	margin: 3px 10px 5px 0; 
 	border: none;
 	float:left;
-	width: 150px;
-	height: 150px;
 }
 
 dl dd {
@@ -44,6 +42,14 @@ dl dd {
 	width: 660px;
 	padding: 0px;
 	line-height:1.3em;
+}
+
+#wrap p a {
+	color: #c1272d;
+}
+
+#wrap p a:hover {
+	text-decoration:underline;
 }
 
 #main {
@@ -89,14 +95,26 @@ dl dd {
 
 .advisory-board ul {
 	line-height:1.1em;
+	list-style-type:none;
+	margin-left:0px;
+	padding-left:0px;
 }
 
 .advisory-board li {
-	margin:0 20px 10px 0px;
+	margin:0 10px 10px 0px;
+	font-size:0.9em!important;
+	letter-spacing: .04em;
 }
 
-.center {
-	text-align:center;
+.advisory-board li img {
+	float:left;
+	margin:3px 10px 5px 0px;
+}
+
+p.center {
+	text-align:right;
+	font-size:0.7em!important;
+	font-style:italic;
 }
 
 #lead {
@@ -274,7 +292,12 @@ td.donate-price {width: 200;
 		color: #B21C22; 
 		padding-right: 127px;
 		}
-#right {float: right; position: relative; width: 50%;}
+
+#left, #left p, #right p {
+	width:330px;
+}
+
+#right {float: right; position: relative; width:330px;}
 
 #right img {
 	margin-left:10px;
