--- a/views/how.tmpl
+++ b/views/how.tmpl
@@ -1,82 +1,37 @@
 #extends base
 
 #def maincol() 
-<div id="page-wrap"> <div id="right-text"> <div id="who"> <h2>Steering Committee</h2> <dl> <dt> <a href="#"> <img
-src="/images/judith.jpg" /> </a> </dt> <dd> <strong>Judith Kaine:</strong>  Influenced by a visit to Cap Haitien and her work in healthcare
-with Haitian migrants in the Dominican Republic, Judith founded the 100 Beds for Haiti campaign. Judith brings experiences working with
-refugees and displaced communities in the USA, Sudan, Uganda, and the Caribbean, on projects focused in health promotion, post-conflict
-reconstruction, and community building through the arts. A Floridian turned Brooklynite, she is completing her Master of International
-Affairs and Master of Public Health degrees at Columbia University. Judith likes using cameras and modern media to focus her passions as they
-relate to logic and emotion, the creation of social change, humor and ideas, good tastes, and good times. </dd> <dt> <img
-src="/images/marc.jpg" /> </dt> <dd> <strong>Marc Maleika:</strong> Before his current post heading the Sustainable Design Incubator at the
-Pratt Institute in Brooklyn, NY, Marc worked in Natural Disaster Risk Management and Prevention at the World Bank. His time spent in
-Pakistan, Indonesia, and Washington DC helped shape his interests in bringing smart design to business development. Marc holds a Master of
-International Affairs from Columbia University and a Master of Science in Economics from Maastricht University. His German and French
-heritage predisposes him for a love for electronic music, architecture, and fast cars. </dd> <dt> <a href="#"> <img
-src="/images/elizabeth.jpg" /> </a> </dt> <dd> <strong>Elizabeth Callanan: </strong>Elizabeth is an activist with a background in public
-interest law. She graduated from Drew University with a BA in Political Science and English and received her J.D. from Brooklyn Law School in
-2006. Elizabeth brings her experience in online media, lobbying and advocacy to the project and is excited to be working for sustainable
-change for healthcare in Haiti. She has lived and worked in Washington DC, London and New York City. </dd> <dt> <a href="#"><img
-src="/images/cassidy.jpg" /> </a> </dt> <dd> <strong>Cassidy Flanagan:</strong> Cassidy is a writer and editor living in Brooklyn, New York.
-Hailing from Vermont, Cassidy has worked for the Global Health Council, the world&apos;s largest membership advocacy organization and she has
-also served as the campaign manager for Vermont State Senator John F. Campbell for the 2008 election. Cassidy received a B.A. in Comparative
-Literature from the American University of Paris, and has lived and worked in Paris, Dublin, and Amsterdam where among many things, she
-developed a great affinity for cheese. </dd> </dl> </div> </div> <div id="left" class="advisory-board">
+<div id="page-wrap"> <div id="right-text"> <div id="who"> <h2>Steering Committee</h2> <dl> <dt> <a href="#"> <img 
+src="/images/judith.jpg" /> </a> </dt> <dd> <strong>Judith Kaine:</strong> Influenced by a visit to Cap Haitien and her work in healthcare with Haitian migrants in the Dominican Republic, Judith founded the 100 Beds for Haiti Campaign. Judith brings experiences working with refugees and displaced communities in the USA, Sudan, Uganda, and the Caribbean, on projects and research in the areas of health promotion, post-conflict reconstruction, and community building through the arts. A Floridian turned Brooklynite, she is completing her Master of International Affairs and Master of Public Health degrees at Columbia University. Judith likes using cameras and modern media to focus her passions as they relate to logic and emotion, the creation of social change, humor and ideas, good tastes, and good times.</dd> <dt> <img 
+src="/images/marc.jpg" /> </dt> <dd> <strong>Marc Maleika:</strong> Before his current post heading the Sustainable Design Incubator at the Pratt Institute in Brooklyn, NY, Marc worked in Na-tural Disaster Risk Management and Prevention at the World Bank. His time spent in Pakistan, Indonesia, and Washington DC helped shape his interests in bringing smart design to business development. Marc holds a Master of International Affairs from Columbia University and a Master of Science in Economics from Maastricht University. His German and French heritage predisposes him for a love for electronic music, architecture, and fast cars.</dd> <dt> <a href="#"> <img
+ src="/images/elizabeth.jpg" /> </a> </dt> <dd> <strong>Elizabeth Callanan:</strong> Elizabeth is an activist with a background in public interest law.  She graduated from Drew University with a B.A. in Political Science and English and received her J.D. from Brooklyn Law School in 2006.  Elizabeth brings her experience in online media, lobbying, and advocacy to the project and is excited to be working for improved healthcare in Haiti. She has lived and worked in Washington DC, London, and New York City.</dd> <dt> <a href="#"><img
+ src="/images/cassidy.jpg" /> </a> </dt> <dd> <strong>Cassidy Flanagan:</strong> Cassidy is a writer and editor living in Brooklyn, New York. Hailing from Vermont, she has worked for the Global Health Council, the world&#39;s largest membership advocacy organization, and she has also served as the campaign manager for Vermont State Senator John F. Campbell for the 2008 election.  Cassidy received a B.A. in Comparative Literature from the American University of Paris, and has lived and worked in Paris, Dublin, and Amsterdam where among many things, she developed a great affinity for cheese.</dd> </dl> </div> </div> <div id="left" class="advisory-board">
 
 <h1>How We Work</h1> <p> Through grassroots mobilization, marketing campaigns, corporate giving, fundraisers, word of mouth, social
-networking, media and blog support, the 100 Beds for Haiti Campaign will raise the necessary resources through our friends, colleagues and
-supporters across the country and world to support our  goal of delivering 100 hospital beds to Haiti by June 1, 2010. </p>
+networking, media and blog support, the <strong>100 Beds for Haiti Campaign</strong> will raise the necessary resources through our friends, colleagues, and 
+supporters across the country and world to support our <strong>goal of delivering 100 hospital beds to Haiti by June 1, 2010.</strong></p>
 
-<h1>Who We Are</h1> <p> <strong>Steering Committee</strong> </p> <p> We are a team of young professionals and we bring experiences in public
-health, disaster management, economic development, advocacy, law, journalism and media, humanitarian aid, visual and performing arts,
+<h1>Who We Are</h1> <p>We are a team of young professionals and we bring experiences in public
+health, disaster management, economic development, advocacy, law, journalism and media, humanitarian aid, visual and performing arts, 
 community building, philanthropy, marketing, event planning, and social networking. Our core Steering Committee is guided by a network of
-supporters including an Advisory Board and Key Stakeholders. </p> <p> Our commitment to helping build a stronger more stable Haiti is rooted
-in the recognition of our shared humanity and our responsibility to use our talents and energy to create positive, sustainable change for a
-healthier Haiti. </p> <p> Please take a moment and learn more about who we are. <p> <p> <strong>Advisory Board</strong> </p>
+supporters including an Advisory Board and Key Stakeholders.</p> <p>Our commitment to helping build a stronger more stable Haiti is rooted 
+in the recognition of our shared humanity and our responsibility to use our talents and energy to create positive, sustainable change for a 
+healthier Haiti.</p> <p>Please take a moment and learn more about who we are.</p> <p><strong>Advisory Board</strong> </p>
 
 <!-- Advisory Board List -->
 
-<ul> <li> <b>Brock Boddie:</b> For the past nine years, Brock has worked as a web project manager and strategist for SIRIUS Satellite Radio,
-the United Nations in the Central African Republic, New York and The Gambia, and for several other organizations. When he isn't helping out
-100 beds for Haiti, he's working for the Open Society Institute as their Senior Web Advocacy Advisor as well as the Web Manager for buildOn,
-an education and community service focused non-profit.  Brock has a masters degree in international affairs from Columbia University, a BA
-from the University of Michigan, and a cat named Meyer. </li> <li> <b>Edna Bonhomme:</b> Edna is an activist and a graduate student at
-Columbia University where she studies public health with an emphasis on understanding sexuality in the Caribbean. Edna brings not only her
-Haitian descent, working experiences in south Florida and in northern Haiti, and her passion for political and health equality to this
-campaign, but also her love for dancing. </li> <li> <b>Marcin Buzanski:</b> Marcin is an International Consultant and Project Manager in the
-fields of conflict resolution, peacebuilding, development policy, statebuilding and partnerships, with experience in conflict zones on three
-continents. He has also been working for 5 years at UNICEF, recently as Fundraising Manager, coordinating corporate relations, campaigns and
-partnerships. He is pursuing a PhD in Political Sciences, working on sustainability factors in peace processes, also holding an MA in
-International Affairs from Columbia University as well as an MA and BA in International Relations from Warsaw University.  In addition to
-this campaign, he is passionate about extensive travel and snowboarding. </li> <li> <b>Sarah Dutcher:</b> Sarah&#8217;s interest in this
-project stems from her experience working with the UNDP in Haiti, where she experienced first-hand the strength and commitment of the
-Haitians. With a BA in Theatre from the University of Northern Colorado, and a Master of International Affairs from Columbia University,
-Sarah hopes to combine her passion for theatre and sustainable development by helping facilitate change through the arts.  She also likes to
-torture her colleagues by bursting into song. </li> <li> <b>Claire Espey:</b> Claire brings her affinity for Haiti and Haitians as well as
-her experiences working at Pure Water for Haiti  to the 100 Beds campaign. Currently studying Health Promotion as a Master of Public Health
-candidate at Columbia University, she also serves as a Program Coordinator for the Inequalities Center and the Robert Wood Johnson Health &
-Society Scholars Program at Columbia. Through this, she is able to focus her interests in water, sanitation, and hygiene in promoting greater
-global health equity.</li> <li> <b>Marcy Hersh:</b> Marcy is a dynamic, multilingual gender and development specialist with diverse
-experiences working in Afghanistan, Ghana, Haiti, India, Kenya, Uganda, and the Marshall Islands. Along with ensuring 100 beds for Haiti,
-Marcy is interested in gender-based violence prevention, gender mainstreaming, and gender and peacebuilding. She recently completed a masters
-degree in international affairs from Columbia University. </li> <li> <b>Donald Jones:</b> Donald&#8217;s social coordination skills and event
-planning experiences, as well as his studies of political science at Duke University, 5+ years of experience in public sector workforce
-development, and Master of Public Administration with a focus on Urban Public Policy from Columbia University, have led to his current work
-for the NYC Department of Small Business Services as the Manager of Recruitment and Placement. A Chicago native, excellent dancer, and trivia
-luminary, Donald brings great energy and creative input to the 100 Beds for Haiti Campaign. </li> <li> <b>Emad Kiyaei:</b> Emad is an
-international development consultant, with expertise in conflict prevention, mediation and advocacy. Currently he is an associate at the
-Center for International Conflict Resolution (CICR) at Columbia University, focusing on Middle East and Iranian affairs. In the past year, he
-helped organize two medical aid convoys to Gaza Strip, which brought 200 trucks and ambulances, $2 million worth of medicine and 500 civil
-society members from 16 countries to the area. Emad holds a BSc from University of Stony Brook and completed his Masters at Columbia
-University. He is fluent in English and Farsi, and proficient in conversational Afrikaanse. </li> <li> <b>Scott MacKenzie:</b> Scott is a
-co-founder and director of Project Groundswell, a website dedicated to making sense of a changing global environment. He has contributed to
-numerous environment and natural resource management projects with organizations that include the United Nations Environment Programme and
-the Earth Institute, and was the creator of the University of California's Sustainable Procurement Program.  Scott first became involved in
-Haiti after contributing to a post disaster environmental needs assessment there in March 2009. </li> <li> <b>Daren McKelvey:</b>
-Daren&#8217;s work with media startups, content production, videography, and business development has led him to his current entrepreneurial
-ventures focused on representing filmmakers, photographers, and video production outfits. Originally from Washington DC, holding a BA in
-Psychology from Brandeis University, Daren speaks Portuguese and Spanish, and is passionate about marketing, art and design, soccer, world
-music and world travel. </li> </ul>
+<ul> <li><img
+ src="/images/brock.jpg" /><b>Brock Boddie:</b> For the past nine years, Brock has worked as a web project manager and strategist for SIRIUS Satellite Radio, the United Nations in the Central African Republic, New York and The Gambia, and for several other organizations. When he isn&#39;t helping out 100 Beds for Haiti, he&#39;s working for the Open Society Institute as their Senior Web Advocacy Advisor as well as the Web Manager for buildOn, an education and community service focused non-profit.  Brock has a masters degree in international affairs from Columbia University, a BA from the University of Michigan, and a cat named Meyer.</li> <li><img
+ src="/images/edna.jpg" /><b>Edna Bonhomme:</b> Edna is an activist and a graduate student at Columbia University where she studies public health with an emphasis on understanding sexuality in the Caribbean. Edna brings not only her Haitian descent, working experiences in south Florida and in northern Haiti, and her passion for political and health equality to this campaign, but also her love for dancing.</li> <li><img
+ src="/images/marcin.jpg" /> <b>Marcin Buzanski:</b> Marcin is an international consultant in project management in the fields of conflict resolution, peace-building, development policy, statebuilding, and partnerships, bringing experience in conflict zones across three continents. He has worked with UNICEF for 5 years, most recently as a Fundraising Manager, coordinating corporate relations, campaigns and partnerships. Marcin holds a Master of International Affairs from Columbia University as well as an MA and BA in International Relations from Warsaw University, and is currently pursuing a PhD in Political Sciences. In addition to this campaign, he is passionate about extensive travel and snowboarding.</li> <li><img
+ src="/images/sarah.jpg" /><b>Sarah Dutcher:</b>  Sarah&#39;s interest in this project stems from her experience working with the UNDP in Haiti, where she experienced first-hand the strength and commitment of Haitian people.  With a BA in Theatre from the University of Northern Colorado, and a Master of International Affairs from Columbia University, Sarah hopes to combine her passion for theatre and sustainable development by helping facilitate change through the arts.  She also likes to torture her colleagues by bursting into song.</li> <li><img
+ src="/images/claire.jpg" /><b>Claire Espey:</b> Claire brings her affinity for Haiti and Haitians as well as her experiences working at Pure Water for Haiti to the 100 Beds campaign. Currently studying Health Promotion as a Master of Public Health candidate at Columbia University, she also serves as a Program Coordinator for the Inequalities Center and the Robert Wood Johnson Health & Society Scholars Program at Columbia. Through this she is able to focus her interests in water, sanitation, and hygiene in promoting greater global health equity.</li> <li><img
+ src="/images/marcy.jpg" /><b>Marcy Hersh:</b> Marcy is a dynamic, multilingual gender and development specialist with diverse experiences working in Afghanistan, Ghana, Haiti, India, Kenya, Uganda, and the Marshall Islands. Along with ensuring 100 Beds for Haiti, Marcy is interested in gender-based violence prevention, gender mainstreaming, and gender and peacebuilding. She recently completed a Master of International Affairs degree from Columbia University.</li> <li><img
+ src="/images/donald.jpg" /><b>Donald Jones:</b> Donald&#39;s social coordination skills and event planning experiences, as well as his studies of Political Science at Duke University, 5+ years of experience in public sector workforce development, and Master of Public Administration with a focus on Urban Public Policy from Columbia University, have led to his current work for the NYC Department of Small Business Services as the Manager of Recruitment and Placement. A Chicago native, excellent dancer, and trivia luminary, Donald brings great energy and creative input to the 100 Beds for Haiti Campaign.</li> <li><img
+ src="/images/emad.jpg" /><b>Emad Kiyaei:</b> Emad is an international development consultant, with expertise in conflict prevention, mediation and advocacy. Currently he is an associate at the Center for International Conflict Resolution (CICR) at Columbia University, focusing on Middle East and Iranian affairs. In the past year, he helped organize two medical aid convoys to the Gaza Strip, which brought 200 trucks and ambulances filled with &#36;2 million worth of medicine and 500 civil society members from 16 countries to the area. Emad speaks Farsi and Afrikaanse, holds a BSc from the University of Stony Brook and completed his Masters at Columbia University.</li> <li><img
+ src="/images/scott.jpg" /><b>Scott MacKenzie:</b> Scott is a co-founder and director of <a href="http://projectgroundswell.com" target="_blank">Project Groundswell</a>, a website dedicated to making sense of a changing global environment. He has contributed to numerous environmental and natural resource management projects with organizations including the United Nations Environment Programme and the Earth Institute, and he created the University of California&#39;s Sustainable Procurement Program. Scott first became involved in Haiti while contributing to post-disaster environmental needs assessment work there in 2009. </li> <li><img
+ src="/images/daren.jpg" /><b>Daren McKelvey:</b>
+Daren&#39;s work with media startups, content production, videography, and business development has led him to his current entrepreneurial ventures focused on representing filmmakers, photographers, and video production outfits. Originally from Washington DC, holding a BA in Psychology from Brandeis University, Daren speaks Portuguese and Spanish, and is passionate about marketing, art and design, soccer, world music, and world travel.</li> </ul>
 
 <!-- End Advisory Board List --> </div> </div>
 #end def
