--- a/views/partners.tmpl
+++ b/views/partners.tmpl
@@ -9,8 +9,7 @@
 	<div id="right"> 
 		<img src="/images/stats.jpg" /> 
 		<p class="center">
-			<i><small>*2008 statistics</small></i>
-		</p>
+*2008 statistics</p>
 	</div>
 	<div id="left">
 		<h3>H&ocirc;pital Sacr&eacute; Coeur and The CRUDEM Foundation </h3>
@@ -25,27 +24,25 @@
 			
 		<p> 
 			As a 501c3 registered non-profit organization based
-			in the United States, <b>all donations to CRUDEM through the 100 Beds
-			for Haiti campaign are tax-deductible.</b>  Please see the
-			organization&#8217;s IRS letter of determination, audited financial
-			statements and Tax ID number <ahref="http://www.crudem.org/give/tax-info">here</a>. 
+			in the United States, <strong>all donations to CRUDEM through the 100 Beds
+			for Haiti Campaign are tax-deductible</strong>.  Please see the
+			organization&#39;s IRS letter of determination, audited financial
+ statements and Tax ID number <a href="http://www.crudem.org/give/tax-info" target="_blank">here</a>. 
 		</p>
 
 		<p> 
-			<i>
-				ALL DONATIONS TO THE 100 BEDS FOR HAITI CAMPAIGN ARE EARMARKED FOR THIS
+			<em>100&#37; OF DONATIONS TO THE 100 BEDS FOR HAITI CAMPAIGN ARE EARMARKED FOR THIS
 				PARTICULAR CAUSE AND WILL GO DIRECTLY TO THE ORGANIZATION. 
-			</i>
+			</em>
 		</p> 
 
 		<p>
-			<i>
-				Please learn more about our partners and their work by visiting their <a
-				href="http://www.crudem.org" target="_blank"> website</a>, following
+			<em>
+				Please learn more about our partners and their work by visiting their <a href="http://www.crudem.org" target="_blank">website</a>, following
 				them on <a href="http://www.facebook.com/CRUDEMHaiti"
 				target="_blank">facebook</a> and on <a
 				href="http://twitter.com/crudem_haiti" target="_blank">twitter</a>.
-			</i>
+</em>
 		</p> 
 	</div>
 	<div class="footer">
