--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -15,6 +15,18 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script type='text/javascript' src='/js/jquery.color-RGBa-patch.js'></script>
     <script type='text/javascript' src='/js/example.js'></script>
+ <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+ </script>
+ <script type="text/javascript">
+   try {
+   var pageTracker = _gat._getTracker("UA-12751934-1");
+   pageTracker._setDomainName(".100bedsforhaiti.com");
+   pageTracker._trackPageview();
+   } catch(err) {}
+ </script>
+
   </head>
 
   <body>
